<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- TOPBAR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/blue"
            android:gravity="center_vertical"
            android:paddingRight="25dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_left"
                android:paddingHorizontal="25dp"
                android:onClick="goBack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_you"

                android:textAppearance="@style/your_account"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_instagram_text"
                android:layout_marginBottom="10dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAppearance="@style/your_account"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_user_outlined"
                    android:layout_marginBottom="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAppearance="@style/your_account"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_key_outlined"/>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/login_with_"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/linear_layout_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="#0070FF"
                android:backgroundTint="#0070FF"
                android:onClick="login">

                <ImageView
                    android:id="@+id/ic_instagram_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="21dp"
                    android:src="@drawable/ic_instagram" />

                <TextView
                    android:id="@+id/button_login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="21dp"
                    android:layout_marginBottom="17dp"
                    android:layout_toEndOf="@id/ic_instagram_login"
                    android:gravity="center_horizontal|top"
                    android:text="@string/connect"
                    android:textColor="#111111"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <ProgressBar
                    android:id="@+id/progress_loader"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="12dp"
                    android:gravity="center_horizontal|top"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/black"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>