<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/follower_manager_banner" />

        <LinearLayout
            android:id="@+id/linear_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/banner"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/your_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/your_account"
                        android:textAppearance="@style/your_account"
                        android:textStyle="bold"


                        />

                    <ImageView
                        android:id="@+id/vector"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginLeft="25dp"



                        android:background="@drawable/ic_green"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="25dp">

                    <TextView
                        android:id="@+id/your_account2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/follower_manager"
                        android:textAppearance="@style/your_account"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/vector2"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"

                        android:layout_marginLeft="25dp"
                        android:background="@drawable/ic_green" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login_with_"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_below="@id/linear_layout_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:background="#0070FF"
            android:backgroundTint="#0070FF"
            android:onClick="loginWithInstagram">

            <ImageView
                android:id="@+id/ic_instagram_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="21dp"
                android:src="@drawable/ic_instagram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="17dp"
                android:layout_toEndOf="@id/ic_instagram_login"
                android:gravity="center_horizontal|top"
                android:text="@string/login_with_instagram"
                android:textColor="#111111"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/change_lang_french"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_with_"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textAppearance="@style/your_account"
            android:textColor="#0070FF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="FRENCH"
            android:onClick="changeToFrench"/>


        <TextView
            android:id="@+id/change_lang_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_lang_french"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textAppearance="@style/your_account"
            android:textColor="#0070FF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="ENGLISH"
            android:onClick="changeToEnglish"/>

        <TextView
            android:id="@+id/change_lang_deutsch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_lang_english"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textAppearance="@style/your_account"
            android:textColor="#0070FF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="DEUTSCH"
            android:onClick="changeToDeutsch"/>

    </RelativeLayout>

</ScrollView>